--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   },
   "dependencies": {
     "@google-cloud/storage": "^7.14.0",
+    "@next/third-parties": "^15.0.3",
     "@prisma/client": "5.22.0",
     "@radix-ui/react-avatar": "^1.0.4",
     "@radix-ui/react-dialog": "^1.1.2",
